--- a/.github/workflows/publish_to_github.yml
+++ b/.github/workflows/publish_to_github.yml
@@ -36,7 +36,9 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: "20.x"
-          registry-url: https://npm.pkg.github.com/
+
+      - name: Set registry-url
+        run: npm config set registry 'https://npm.pkg.github.com'
 
       - name: Install dependencies
         run: yarn --frozen-lockfile
