--- a/.github/workflows/publish_to_npm.yml
+++ b/.github/workflows/publish_to_npm.yml
@@ -16,7 +16,9 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: "20.x"
-          registry-url: 'https://registry.npmjs.org'
+
+      - name: Set registry-url
+        run: npm config set registry 'https://registry.npmjs.org'
 
       - name: Install dependencies
         run: yarn --frozen-lockfile
