--- a/.github/workflows/publish_to_github.yml
+++ b/.github/workflows/publish_to_github.yml
@@ -38,7 +38,7 @@ jobs:
           node-version: "20.x"
 
       - name: Set registry-url
-        run: npm config set registry 'https://npm.pkg.github.com'
+        run: npm pkg set publishConfig.registry='https://npm.pkg.github.com'
 
       - name: Install dependencies
         run: yarn --frozen-lockfile
